fix align col

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -187,6 +187,12 @@
   background-color: $gray-even;
 }
 .section-col-table{
+  text-align: right;
+  font-size: 15px;
+  font-weight: 800;
+  line-height: 16px;
+}
+.section-col-certification{
   text-align: center;
   font-size: 15px;
   font-weight: 800;
